...
  final TextEditingController _controller = TextEditingController();
  List<Query$searchPodcastDirectory$searchPodcastDirectory> _results = [];
  bool _busy = false;

  bool get _inputIsUrl {
    final text = _controller.text.trim();
    return text.startsWith('http://') || text.startsWith('https://');
  }

  @override
  void dispose() {
    _controller.dispose();
    super.dispose();
...
